[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Menus/MenuPrincipal.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/Fonts/Poppins-Bold.ttf"

[sub_resource type="DynamicFont" id=2]
size = 26
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Assets/Fonts/Poppins-Bold.ttf"

[sub_resource type="DynamicFont" id=4]
size = 26
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Assets/Fonts/Fonseca Bold - Free ver.otf"

[sub_resource type="DynamicFont" id=6]
size = 36
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Assets/Fonts/Fonseca Bold - Free ver.otf"

[sub_resource type="DynamicFont" id=8]
size = 38
font_data = SubResource( 7 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -541.026, -193.587 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonJoin" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 23.973
margin_top = 93.0
margin_right = 260.973
margin_bottom = 159.0
rect_scale = Vector2( 1.3, 1.3 )
custom_fonts/font = SubResource( 2 )
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonHost" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -327.419
margin_top = 93.0
margin_right = -90.4193
margin_bottom = 159.0
rect_scale = Vector2( 1.3, 1.3 )
custom_fonts/font = SubResource( 4 )
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -114.0
margin_top = -35.0
margin_right = 134.0
margin_bottom = 7.0
custom_fonts/font = SubResource( 6 )
text = "    127.0.0.1"
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -164.005
margin_top = -31.498
margin_right = -117.005
margin_bottom = 7.50195
custom_fonts/font = SubResource( 8 )
text = "IP:"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ButtonJoin" to="." method="_on_ButtonJoin_pressed"]
[connection signal="pressed" from="ButtonHost" to="." method="_on_ButtonHost_pressed"]
[connection signal="focus_entered" from="TextEdit" to="." method="_on_TextEdit_focus_entered"]
[connection signal="focus_exited" from="TextEdit" to="." method="_on_TextEdit_focus_exited"]
[connection signal="text_changed" from="TextEdit" to="." method="_on_TextEdit_text_changed"]
